@@ -1,8 +1,13 @@
 package cn.iocoder.yudao.framework.excel.core.util;
 
+import cn.hutool.core.collection.CollUtil;
+import cn.iocoder.yudao.framework.excel.core.convert.DynamicTimeZoneLocalDateTimeConvert;
 import cn.iocoder.yudao.framework.excel.core.handler.SelectSheetWriteHandler;
 import com.alibaba.excel.EasyExcel;
+import com.alibaba.excel.converters.Converter;
 import com.alibaba.excel.converters.longconverter.LongStringConverter;
+import com.alibaba.excel.read.builder.ExcelReaderBuilder;
+import com.alibaba.excel.write.builder.ExcelWriterSheetBuilder;
 import com.alibaba.excel.write.style.column.LongestMatchColumnWidthStyleStrategy;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.web.multipart.MultipartFile;
@@ -10,6 +15,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.time.ZoneId;
 import java.util.List;
 
 /**
@@ -30,7 +36,9 @@ public class ExcelUtils {
      * @param <T>       泛型，保证 head 和 data 类型的一致性
      * @throws IOException 写入失败的情况
      */
-    public static <T> void write(HttpServletResponse response, String filename, String sheetName,
+    public static <T> void write(HttpServletResponse response,
+                                 String filename,
+                                 String sheetName,
                                  Class<T> head, List<T> data) throws IOException {
         // 输出 Excel
         EasyExcel.write(response.getOutputStream(), head)
@@ -40,7 +48,7 @@ public class ExcelUtils {
                 .registerConverter(new LongStringConverter()) // 避免 Long 类型丢失精度
                 .sheet(sheetName).doWrite(data);
         // 设置 header 和 contentType。写在最后的原因是，避免报错时，响应 contentType 已经被修改了
-        response.addHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8.name()));
+        response.addHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
         response.setContentType("application/vnd.ms-excel;charset=UTF-8");
     }
 
@@ -49,5 +57,38 @@ public class ExcelUtils {
                 .autoCloseStream(false)  // 不要自动关闭，交给 Servlet 自己处理
                 .doReadAllSync();
     }
+
+    public static <T> List<T> read(MultipartFile file, Class<T> head, List<Converter<?>> converters) throws IOException {
+        ExcelReaderBuilder builder = EasyExcel.read(file.getInputStream(), head, null)
+                .autoCloseStream(false);// 不要自动关闭，交给 Servlet 自己处理
+        if (CollUtil.isNotEmpty(converters)) {
+            converters.forEach(builder::registerConverter);
+        }
+        return builder.doReadAllSync();
+    }
+
+
+    public static <T> void write(HttpServletResponse response,
+                                 String filename,
+                                 String sheetName,
+                                 Class<T> head,
+                                 List<T> data,
+                                 List<Converter<?>> converters) throws IOException {
+        // 输出 Excel
+        ExcelWriterSheetBuilder builder = EasyExcel.write(response.getOutputStream(), head)
+                .autoCloseStream(false) // 不要自动关闭，交给 Servlet 自己处理
+                .registerWriteHandler(new LongestMatchColumnWidthStyleStrategy()) // 基于 column 长度，自动适配。最大 255 宽度
+                .registerWriteHandler(new SelectSheetWriteHandler(head)) // 基于固定 sheet 实现下拉框
+                .registerConverter(new LongStringConverter()) // 避免 Long 类型丢失精度
+                .sheet(sheetName);
+        if (CollUtil.isNotEmpty(converters)) {
+            converters.forEach(builder::registerConverter);
+        }
+        builder.doWrite(data);
+        // 设置 header 和 contentType。写在最后的原因是，避免报错时，响应 contentType 已经被修改了
+        response.addHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
+        response.setContentType("application/vnd.ms-excel;charset=UTF-8");
+    }
+
 
 }
